syntax = "proto3";

package doravota.sponsor.v1;

import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/DoraFactory/doravota/x/sponsor-contract-tx/types";

// ContractSponsor defines the sponsor information for a contract
message ContractSponsor {
  string contract_address = 1;
  bool is_sponsored = 2;
  string creator_address = 3;  // The address that created/manages this sponsor configuration
  string sponsor_address = 4;  // The derived address that actually pays for sponsorship fees
  int64 created_at = 5;
  int64 updated_at = 6;
  repeated cosmos.base.v1beta1.Coin max_grant_per_user = 7;
}

// GenesisState defines the sponsor module's genesis state
message GenesisState {
  repeated ContractSponsor sponsors = 1;
  Params params = 2;
  repeated UserGrantUsage user_grant_usages = 3;
}

// UserGrantUsage tracks how much grant a user has used for a specific contract
message UserGrantUsage {
  string user_address = 1;
  string contract_address = 2;
  repeated cosmos.base.v1beta1.Coin total_grant_used = 3;
  int64 last_used_time = 4;
}

// Params defines the parameters for the sponsor module
message Params {
  // Whether sponsorship is globally enabled
  bool sponsorship_enabled = 1;

  // Maximum gas limit per sponsored transaction
  uint64 max_gas_per_sponsorship = 2;

  // Max number of CosmWasm MsgExecuteContract messages allowed in a single
  // sponsored transaction (must all target the same contract).
  // This caps the per-tx policy-check workload to reduce DoS risk.
  // A value of 0 means "no explicit cap" (not recommended in production).
  uint32 max_exec_msgs_per_tx_for_sponsor = 10;

  // Max raw JSON bytes allowed per MsgExecuteContract payload to be considered
  // for sponsorship policy checks. This is a pre-parse size guard executed
  // before any JSON (un)marshalling to prevent CPU/memory amplification.
  // 0 disables this guard.
  uint32 max_policy_exec_msg_bytes = 11;
}
